--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div class="jumbotron text-center">
-        <h1>Otsikko</h1>
-        <p>Tekstiä</p>
+        <h1>SAKKY</h1>
+        <p>Savon Ammattiopisto</p>
     </div>
 
     <div class="container-fluid">
@@ -31,9 +31,24 @@
                 </ul>
             </div>
             <div class="col-sm-8">
-                <h1>Otsikko</h1>
+                <h1>Savon ammattiopisto SAKKY:</h1>
                 <p>
+                    <br>
+                    Olemme sitoutuneet rakentamaan kestävää tulevaisuutta.
+                    <br>
+                    Koulutuksen tarjoajana luomme monipuolisia elinikäisen oppimisen mahdollisuuksia,
+                    jotka kattavat ammatillisen koulutuksen, täydennyskoulutukset ja lukio-opinnot.
+                    Vastuullamme ovat sekä Savon ammattiopisto että Varkauden lukio.
+                    <br>
+                    <br>
+                    Joka vuosi noin 15 000 opiskelijaa hyödyntää laajaa koulutustarjontaamme.
+                    Räätälöidyt ja korkealaatuiset koulutusratkaisut vastaavat työelämän muuttuviin tarpeisiin,
+                    ja toimimme aktiivisena työelämän kehittäjänä.
+                    <br>
+                    <br>
+                    Savon koulutuskuntayhtymä työllistää yli 700 asiantuntijaa.
 
+                    Kampuksemme sijaitsevat Iisalmessa, Kuopiossa (Savilahti ja Kolmisoppi), Siilinjärvellä (Toivala ja Rissala) sekä Varkaudessa. Lisäksi järjestämme koulutuksia eri puolilla Suomea.
                 </p>
             </div>
             <div class="col-sm-2" style="background-color: lightsteelblue;" >
@@ -51,4 +66,5 @@
         <p>&copy; 2025 XXXXX. Kaikki oikeudet pidätetään.</p>
     </footer>
 </body>
+</html>
 </html>
