--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Etusivu</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center" style="background-image: url(koulu.jpg);">
         <h1>SAKKY</h1>
         <p>Savon Ammattiopisto</p>
     </div>
@@ -24,10 +24,10 @@
     <div class="container-fluid">
         <div class="row">
                 <!--Navigointi-->
-            <div class="col-sm-2" style="background-color: lightsteelblue;">
+            <div class="col-sm-2" style="background-color: yellow;">
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="index.html">Etusivu</a></li>
-                    <li><a href="aihe.html">aihe</a></li>
+                    <li><a href="aihe.html">Aihe</a></li>
                 </ul>
             </div>
             <div class="col-sm-8">
@@ -47,24 +47,21 @@
                     <br>
                     <br>
                     Savon koulutuskuntayhtymä työllistää yli 700 asiantuntijaa.
-
                     Kampuksemme sijaitsevat Iisalmessa, Kuopiossa (Savilahti ja Kolmisoppi), Siilinjärvellä (Toivala ja Rissala) sekä Varkaudessa. Lisäksi järjestämme koulutuksia eri puolilla Suomea.
                 </p>
             </div>
-            <div class="col-sm-2" style="background-color: lightsteelblue;" >
-                <h1>Yhteystiedot</h1>
-                <p>
-
-                </p>
+            <div class="col-sm-2" style="background-color: yellow;" >
+                <h2>Yhteystiedot</h2>
+                <p>Hakutoimisto: 044 785 3078, hakutoimisto@sakky.fi</p>
                 <br>
-                <p>sahkoposti@sposti.fi</p>
-                <p>0123456789</p>
+                <p>Opiskelijapalvelut: 017 214 3900, opiskelijapalvelut@sakky.fi</p>
+                <br>
+                <p>Sähköposti: etunimi.sukunimi@sakky.fi</p>
         </div>
     </div>
 
-    <footer class="text-center" style="padding: 20xp 0; margin-top: 30px; background-color: lightsteelblue;">
+    <footer class="text-center" style="padding: 20xp 0; margin-top: 30px; background-color: yellow;">
         <p>&copy; 2025 XXXXX. Kaikki oikeudet pidätetään.</p>
     </footer>
 </body>
-</html>
 </html>
